--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,4 +2,6 @@
 <p>Welcome to {{title}}</p>
 
 <a href='/hello'>Hello</a><br>
-<a href='/hello?greeting=Ahoy'>Ahoy</a><br>
+<a href='/hello?greeting=Ahoy'>Ahoy</a><br><br>
+
+<a href='/articles'>Articles</a><br>
