--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,3 +5,4 @@
 <a href='/hello?greeting=Ahoy'>Ahoy</a><br><br>
 
 <a href='/articles'>Articles</a><br>
+<a href='/articles?type=json&amount=50'>Articles (JSON)</a>
